syntax = "proto3";

package snippet.grpc.reflection;

option go_package = "proto/agent";

message RegisterRequest {
    string name = 1;
    string address = 2;
    int32 port = 3;
}

message RegisterResponse {
    string msg = 1;
}

service RegistrationService {
    rpc RegisterPlugin(RegisterRequest) returns (RegisterResponse);
}
